--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,6 +12,7 @@
 
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
+    <!-- Image for relative posts -->
     {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
         <img src=
@@ -19,6 +20,18 @@
             "{{ teaser }}"
           {% else %}
             "{{ teaser | relative_url }}"
+          {% endif %}
+          alt="">
+      </div>
+    {% endif %}
+    <!-- Image for index page -->
+    {% if include.type == "list" and post.header.image %}
+      <div class="archive__item-teaser">
+        <img src=
+          {% if post.header.image contains "://" %}
+            "{{ post.header.image }}"
+          {% else %}
+            "{{ post.header.image | relative_url }}"
           {% endif %}
           alt="">
       </div>
@@ -35,4 +48,7 @@
     {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
+  {% if include.type == "list" %}
+    <hr></hr>
+  {% endif %}
 </div>
