Update jekyll theme, fix about page, fix Google SEO

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -139,6 +139,14 @@
 
 {% if site.google_site_verification %}
   <meta name="google-site-verification" content="{{ site.google_site_verification }}" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_site_verification }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', '{{ site.google_site_verification }}');
+  </script>
 {% endif %}
 {% if site.bing_site_verification %}
   <meta name="msvalidate.01" content="{{ site.bing_site_verification }}">
